---
config:
  layout: elk
---
classDiagram
direction TB

class System {
    - user_list : List~User~
    - resource_list : List~Resource~
    - activity_list : List~Activity~
    - promotion : Dict~Date, Promotion~
    - company_wallet : float
    + add_user(User)
    + remove_user(User)
    + add_resource(Resource)
    + remove_resource(Resource)
    + add_activity(Activity)
    + remove_activity(Activity)
    + select_resource(residence_id, member_id , start_date , end_date)
    + use_promotion_discount(promotion_id)
    + authenticate_request(User)
    + book_residence(user_id, residence_id, booking_id)
    + book_vehicle(user_id, vehicle_id, booking_id)
    + book_activity(user_id, activity_id, booking_id)
    + request_payment(user_id, booking_id)
    + select_coupon(coupon_code)
    + startRoomInspection(booking_id)
    + confirmInspectionComplete(booking_id)
    + addDamage(booking_id, damage_id)
}

class User {
    - user_id : String
    - user_name : String
    - user_mail : String
    - user_password : String
    - age : int
    - driver_license : String
    - membership_level : String
    - total_spending : float
    - booking_list : List~Booking~
    - coupon_list : List~Coupon~
    - booking_record_list : List~Transaction~
    + edit_profile(user_id,user_name,user_mail)
    + add_age(age)
    + view_booking(booking_id)
    + calculate_membership(user_id) 
    + pay_fee(money,bank_id)
    + review(residence_id,booking_id)
    + get-coupon_list(user_id)
}

class Staff {
    - department : String
    + update_resource_status(resource_id)
    + create_activity(activity_namer,activity_type,price,capacity)
    + update_activity(activity_id)
    + show_review(resource_id,activity_id) 
    + pay_cash(amount)
    + verify_payment(amount) 
}

class Manager {
    + check_review(resource_id,activity_id)
    + ban_user(user_id)
}

class Review {
    - rating : flaot
    - review : String
}

class Residence {
    - residence_name : String
    - room_list : List~Room~
    + show_review(resource_id)
} 

class Room {
    - room_id : String
    - room_type : String
    - price : float
    - capacity : int
    - status : String
    + update_status(status : String)
}

class Vehicle {
    - vehicle_id : String
    - type : String
    - seat : int
    - price_per_day : float
    - status : String
}

class Activity {
    - activity_id : String
    - activity_name : String
    - activity_type : String
    - price_per_round : float
    - capacity : int
    - status : String
    + update_activity(activity_id)
    + show_review(activity_id)
}

class DamageItem {
    - damage_id : String
    - description : String
    - price : float
}

class Booking {
    - booking_id : String
    - status : String
    - residencebooking_list : List~Residencebooking~
    - vehiclebooking_list : List~Vehiclebooking~
    - activitybooking_list : List~Activitybooking~
    - damage_list : List~DamageItem~
    + add_residencebookin(ResidenceObj)
    + add_vehiclebooking(VehicleObj)
    + add_activitybooking(ActivitydeObj)
    + cancel(booking_id, user_id)
    + update_status(booking_id, user_id, status)
    + get_booking_item(user_id, booking_id)
    + add_damage(damage : DamageItem)
}

class Residencebooking {
    - residence_booking_id
    - status
    - start_date
    - end_date
    - residence_id
    - room_id
    + add_residence_id()
    + add_start_date(date)
    + add_end_date(date)
    + add_REbooking_id(num)
    + update_status(residence_id,status)
    + cancle(residence_id)
    + get_residence_id()
    + get_detail(residence_id)
}

class Vehiclebooking {
    - vehicle_booking_id
    - status
    - vehicle_id
    + add_vehicle_id()
    + add_Vbooking_id(num)
    + update_status(vehicle_id)
    + check_available(vehicle_id)
    + cancle(vehicle_id)
    + get_detail(vehicle_id)
}

class Activitybooking {
    - booking_id
    - status
    - start_datetime
    - end_datetime
    - activity_id
    + add_activity_id()
    + add_booking_id(booking_id)
    + update_status(status)
    + check_available(activity_id)
    + cancle(activity_id)
    + get_detail(activity_id)
}

class Promotion {
    - discount_rate : float
    - expired_date : Date 
    + get_valid_promotion(base_price) 
}

class Coupon {
    - coupon_code : String
    - discount_rate : float 
    + validate_coupon(coupon_code)
}

class Payment {
    - base_price : float
    - final_price : float
    + calculate_price(base_price, promotion_dicount, membership_discount, coupon_discount) 
    + generate_receipt(item_list, final_amount) 
}

class Bank{
    + verify_transfer(slip_no)
}

class ResidenceTimeSlot{
    - time_slot_id
    - start_datetime
    - end_datetime
    - current_user
    + get_user(user)
    + check_avalible(vehicle_id)
    + add_slot_id(slot_id)
    + add_start_datetime(datetime)
    + add_end_datetime(datetime)            
}

class VehicleTimeSlot{
    - time_slot_id
    - start_datetime
    - end_datetime
    - current_user
    + get_user(user)
    + check_avalible(vehicle_id)
    + get_user(user)  
    + add_slot_id(slot_id)
    + add_start_datetime(datetime)
    + add_end_datetime(datetime)            
}

System "1" o-- "1..*" User
System "1" o-- "1..*" Promotion
System --> Booking
User <|-- Staff
Staff <|-- Manager
System <|-- Residence
System <|-- Vehicle
System o-- Activity
Residence o-- Room
Booking "1" *-- "1..*" Residencebooking
Booking "1" *-- "1..*" Vehiclebooking
Booking "1" *-- "1..*" Activitybooking
Booking "1" *-- "0..*" DamageItem
Residencebooking <-- Residence
Residencebooking "1" --> "1" Room
Vehiclebooking <-- Vehicle
Activitybooking <-- Activity
User "1" o-- "0..*" Booking
User "1" o-- "0..*" Coupon
Booking "1" *-- "1" Payment
Booking --> Residence
Booking --> Vehicle
Booking --> Activity
Room --> Residence
Room --> Residencebooking
Review --o Residence
ResidenceTimeSlot --> Residencebooking
VehicleTimeSlot --> Vehiclebooking
Payment --> Bank